# coi-loops

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  deactivated.gitlab-ci.yml  mypy.ini  pyproject.toml  run_linters.sh  setup.cfg
examples/: comparison.py  simple.py
src/cernml/loops/: __init__.py  _buffers.py  _builder.py  _callbacks.py  _catching.py  _constraints.py  _interfaces.py  _jobs.py  _skeleton_points.py
src/cernml/loops/adapters/: __init__.py  bobyqa.py  extremum_seeking.py  scipy.py  skopt.py
tests/: test_coerce_float_tuple.py  test_gather_skeleton_points.py
