# SPDX-FileCopyrightText: 2020-2023 CERN
# SPDX-FileCopyrightText: 2023 GSI Helmholtzzentrum für Schwerionenforschung
# SPDX-FileNotice: All rights not expressly granted are reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later OR EUPL-1.2+

[build-system]
requires = [
    'pip >= 22',
    'setuptools >= 45',
    'setuptools-scm[toml] ~= 7.0',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']
name = 'cernml-coi-loops'
authors = [
    {name = 'Nico Madysa', email = 'nico.madysa@cern.ch'},
]
description = 'Optimization Loops for the Common Optimization Interfaces'
readme = 'README.md'
license = {file='COPYING'}
dependencies = [
    'cernml-coi ~=0.8.13',
    'cernml-coi-optimizers ~= 1.0',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Physics',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
]

[project.urls]
gitlab = 'https://gitlab.cern.ch/geoff/cerml-coi-loops'

[project.optional-dependencies]
test = ['pytest', 'pytest-cov']
examples = [
    'cernml-coi-optimizers[all] ~= 1.0',
    'matplotlib ~= 3.0',
]

[tool.setuptools_scm]

[tool.black]
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.isort]
profile = 'black'
known_first_party = ['cernml']

[tool.pytest.ini_options]
addopts = '--doctest-modules'
testpaths = ['src', 'tests']

[tool.pylint.format]
ignore-long-lines = '<?https?://\S+>?$'

[tool.pylint.reports]
reports = false
score = false

[tool.pylint.'messages control']
disable = [
    'fixme',
    'similarities',
    'missing-class-docstring',
    'missing-function-docstring',
]

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = '$MYPY_CONFIG_FILE_DIR/src'

[[tool.mypy.overrides]]
module = [
    'numpy.*',
    'pybobyqa.*',
    'scipy.*',
    'skopt.*',
    'gym.*',
    'matplotlib.*',
    'setuptools.*',
    'setuptools_scm.*',
    'pyjapc.*',
]
ignore_missing_imports = true
