[metadata]
name = cernml-coi-loops
url = https://gitlab.cern.ch/geoff/cerml-coi-loops
author = Nico Madysa
author_email = nico.madysa@cern.ch
description = Optimization Loops for the Common Optimization Interfaces
long_description = file: README.md
long_description_content_type = text/markdown
license = Other/Proprietary License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    cernml-coi >=0.7, <0.9
zip_safe = True

[options.package_data]
* = py.typed

[options.packages.find]
include = cernml.*
where = src

[options.extras_require]
cernml-es =
    cernml-extremum-seeking ~= 2.0
bobyqa =
    Py-BOBYQA ~= 1.2
skopt =
    scikit-optimize ~= 0.9.0
# See https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# for information on the %(interpolation)s syntax.
all =
    %(cernml-es)s
    %(bobyqa)s
    %(skopt)s
test =
    %(all)s
    pytest
    pytest-cov
examples:
    %(all)s
    matplotlib
lint =
    black == 22.8.0
    mypy == 0.982
    pycodestyle == 2.9.1
    pylint == 2.15.3

[pycodestyle]
max-doc-length = 72
max-line-length = 88
